--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "next": "16.0.0",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-toastify": "^11.0.5",
+    "remixicon": "^4.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
