--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
-    "next": "16.0.0",
-    "next-auth": "^5.0.0-beta.29",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.0",
+    "next-auth": "^4.24.8",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-toastify": "^11.0.5",
     "remixicon": "^4.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
